syntax = "proto3";

package auth;

service AuthService {
  rpc Authenticate (AuthenticateMessage) returns (AuthenticateResponse) {};
}

message AuthenticateMessage {
  string Authentication = 1;
}

message AuthenticateResponse {
  string id = 1;
  string email = 2;
  string password = 3;
}
